@@ -40,12 +40,15 @@ package com.sun.jersey.api.client;
 import com.sun.jersey.api.client.filter.Filterable;
 import com.sun.jersey.client.impl.ClientRequestImpl;
 import java.net.URI;
+import java.util.List;
 import java.util.Locale;
+import java.util.Map;
 import java.util.concurrent.Callable;
 import java.util.concurrent.Future;
 import java.util.concurrent.FutureTask;
 import javax.ws.rs.core.Cookie;
 import javax.ws.rs.core.MediaType;
+import javax.ws.rs.core.MultivaluedMap;
 import javax.ws.rs.core.UriBuilder;
 
 /**
@@ -317,6 +320,22 @@ public class AsyncWebResource extends Filterable implements
         String query = uri.getRawQuery();
         if (query != null && query.length() > 0) {
             b.replaceQuery(query);        
+        }
+        return new AsyncWebResource(this, b);
+    }
+    
+    /**
+     * Create a new WebResource from this web resource with additional
+     * query parameters added to the URI of this web resource.
+     *
+     * @param params the query parameters.
+     * @return the new web resource.
+     */
+    public AsyncWebResource queryParams(MultivaluedMap<String, String> params) {
+        UriBuilder b = getBuilder();
+        for (Map.Entry<String, List<String>> e : params.entrySet()) {
+            for (String value : e.getValue())
+                b.queryParam(e.getKey(), value);
         }
         return new AsyncWebResource(this, b);
     }
